--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
+    "axios-hooks": "^3.0.1",
     "bootstrap": "^5.1.3",
     "glyphicons": "^0.2.0",
     "history": "^5.3.0",
